<resources>
    <string name="app_name">INA</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="button1">Login</string>
    <string name="button2">Login</string>
    <string name="button3">Cancel</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="capstone">Capstone Name</string>
    <string name="attempts">Attempts Left:</string>
    <color name="orange">#FF9900</color>
    <string name="title_activity_tab_main">TabMainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="label">Nutrition</string>
    <string name="Box1">Age</string>
    <string name="Box2">Height</string>
    <string name="Box3">Weight</string>
    <string name="Box4">Gender</string>
    <string name="profile_character"><u>Characteristics</u></string>
    <string name="profile_diet"><u>Dietary Restrictions</u></string>
    <string name="M">Male</string>
    <string name="F">Female</string>
    <string name="title_activity_main_page">INA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_add">Add Item</string>

    <string name="diabetes">Diabetes</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="ovo_vegetarian">Ovo-Vegetarian</string>
    <string name="lacto_ovo_vegetarian">Lacto-Ovo-Vegetarian</string>
    <string name="peszcetarian">Peszcetarian</string>
    <string name="vegan">Vegan</string>
    <string name="kosher_only">Kosher Only</string>
    <string name="no_pork">No Pork</string>
    <string name="glutten_free">Gluten Free</string>
    <string name="lactose_intolerant">Lactose Intolerant</string>
    <string name="wheat_allergy">Wheat Allergy</string>
    <string name="peanut_allergy">Peanut Allergy</string>
    <string name="egg_allergy">Egg Allergy</string>
    <string name="soy_allergy">Soy Allergy</string>
    <string name="fish_allergy">Fish Allergy</string>
    <string name="shellfish_allergy">Shellfish Allergy</string>
    <string name="shrimp_allergy">Shrimp Allergy</string>

    <string-array name="unitmeasur">
        <item>Diabetes</item>
        <item>Vegetarian</item>
        <item>Ovo-Vegetarian</item>
        <item>Lacto-Ovo-Vegetarian</item>
        <item>Peszcetarian</item>
        <item>Vegan</item>
        <item>Kosher Only</item>
        <item>No Pork</item>
        <item>Gluten Free</item>
        <item>Lactose Intolerant</item>
        <item>Wheat Allergy</item>
        <item>Peanut Allergy</item>
        <item>Egg Allergy</item>
        <item>Soy Allergy</item>
        <item>Fish Allergy</item>
        <item>Shellfish Allergy</item>
        <item>Shrimp Allergy</item>
    </string-array>


</resources>
