<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context="com.ina.ina.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile"
            android:textSize="25dp"
            android:textColor="@color/Dark"
            android:id="@+id/textNutrition"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_marginTop="43dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textView"
            android:layout_alignStart="@+id/editText3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Box2"
            android:id="@+id/textView"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_below="@+id/editText"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Box1"
            android:id="@+id/textView2"
            android:textColor="#000000"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:layout_alignBaseline="@+id/editText"
            android:layout_alignBottom="@+id/editText"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_alignTop="@+id/textView"
            android:layout_alignEnd="@+id/editText"
            android:layout_toEndOf="@+id/textView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Box3"
            android:id="@+id/textView3"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginTop="21dp"
            android:layout_below="@+id/editText2"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editText3"
            android:layout_alignTop="@+id/textView3"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Box4"
            android:id="@+id/textView4"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_below="@+id/editText3"
            android:layout_alignParentStart="true"
            android:layout_marginTop="34dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox"
            android:layout_below="@+id/textView4"
            android:layout_alignParentStart="true"
            android:layout_marginTop="36dp"
            android:checked="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/M"
            android:id="@+id/textView5"
            android:layout_alignBottom="@+id/checkBox"
            android:layout_toEndOf="@+id/checkBox"
            android:textColor="#000000" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox2"
            android:layout_alignBottom="@+id/textView5"
            android:layout_toEndOf="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/F"
            android:id="@+id/textView6"
            android:layout_alignBottom="@+id/checkBox2"
            android:layout_toEndOf="@+id/checkBox2"
            android:textColor="#000000" />


        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_height="wrap_content"
            android:text="Save"
            android:id="@+id/button4"
            android:onClick="save"
            android:background="@drawable/textinputborders2"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true" />

        <Button
            android:text="Allergies or Diseases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"

            android:onClick="allergies"
            android:id="@+id/button5"
            android:background="@drawable/textinputborders2"
            android:layout_above="@+id/button4"
            android:layout_alignParentStart="true" />


    </RelativeLayout>

</RelativeLayout>
